<resources>
    <string name="app_name">好来酒</string>

    <string name="main_tab_index">首页</string>
    <string name="main_tab_mall">商城</string>
    <string name="main_tab_shopping_car">购物车</string>
    <string name="main_tab_mine">我的</string>

    <string name="car_edit">编辑</string>
    <string name="car_complete">完成</string>

    <string-array name="wine_type">
        <item>白酒</item>
        <item>啤酒</item>
        <item>红酒</item>
        <item>黄酒</item>
    </string-array>

    <string-array name="roll_view_pager">
        <item>#ff0000</item>
        <item>#00ff00</item>
        <item>#0000ff</item>
    </string-array>


    <string-array name="wine_filter_condition">
        <item>香型</item>
        <item>品牌</item>
        <item>产地</item>
        <item>价格</item>
    </string-array>

    <string-array name="wine_brand">
        <item>全部</item>
        <item>茅台</item>
        <item>五粮液</item>
        <item>剑南春</item>
        <item>泸州老窖</item>
        <item>牛栏山</item>
        <item>洋河</item>
        <item>红星</item>
    </string-array>

    <string-array name="wine_origin">
        <item>全部</item>
        <item>贵州</item>
        <item>四川</item>
        <item>安徽</item>
        <item>河南</item>
        <item>湖北</item>
        <item>江苏</item>

    </string-array>

    <string-array name="wine_price">
        <item>全部</item>
        <item>100元以下</item>
        <item>100-199元</item>
        <item>200-299元</item>
        <item>300-499元</item>
        <item>500-999元</item>
        <item>1000元以上</item>

    </string-array>

    <string-array name="wine_flavor">
        <item>全部</item>
        <item>浓香型</item>
        <item>酱香型</item>
        <item>清香型</item>
        <item>浓酱兼香型</item>
        <item>凤香型</item>
        <item>特香型</item>
        <item>老白干型</item>
        <item>其他</item>
    </string-array>

    <!--商品详情-->
    <string name="goods_detail_price">¥</string>
    <string name="goods_detail_cost">原价：¥</string>
    <string name="goods_detail_sale">已售：</string>
    <string name="goods_detail_comment">商品评价：</string>
    <string name="goods_detail_description">商品概要：</string>
    <string name="goods_detail_store">商品库存：</string>

    <string name="goods_detail_server">客服</string>
    <string name="goods_detail_add_shopping_car">加入购物车</string>
    <string name="goods_detail_buy_now">立即购买</string>

    <string name="goods_detail_pull_more">继续拖动，查看图文详情</string>
    <string name="goods_detail">图文详情</string>
    <string name="phone_check">[1][34578]\\d{9}</string>
    <string name="warn_contacts_name">收件人姓名：2-15个字符限制</string>
    <string name="warn_contacts_phone">请输入正确手机号码</string>
    <string name="warn_contacts_address">收货人地址最少5个字,最多不能超过60个字</string>
</resources>
