<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.jude.rollviewpager.RollPagerView
        android:id="@+id/goods_detail_view_pager"
        android:layout_width="match_parent"
        android:layout_height="350dp"/>

    <!--商品描述-->
    <TextView
        android:id="@+id/goods_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:ellipsize="end"
        android:padding="10dp"
        android:textColor="#323232"
        android:textSize="16sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d5d5d5"
        android:layout_marginTop="1px"
        android:layout_marginBottom="10dp"/>

    <!--优惠价-->
    <TextView
        android:id="@+id/goods_detail_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:textColor="#ff020b"
        android:textSize="14sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/layer_list_border_top_bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/goods_detail_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goods_detail_comment"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"/>

        <RatingBar
            android:id="@+id/goods_detail_rating"
            style="@style/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:isIndicator="true"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@drawable/layer_list_border_top_bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goods_detail_description"
            android:textColor="#323232"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/goods_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textColor="#eb2512"
            android:layout_toRightOf="@id/text_product_name"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="13sp"/>
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="#EEE">
        <View
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/goods_detail_pull_more"/>
        <View
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

</LinearLayout>
