<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_help"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/kefu_detail"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="1px"
                android:paddingTop="1px"
                android:text="@string/goods_detail_server"
                android:textColor="@color/themeColor"
                android:textSize="12sp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_car"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_detail_add"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/goods_detail_add_shopping_car"
            android:textColor="@color/white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/text_buy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_detail_buy"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/goods_detail_buy_now"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </LinearLayout>





    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/themeColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_detail_back_has_bg"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="商品"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:padding="3dp"
                android:background="@drawable/layer_list_wine_detail_select"/>

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="详情"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>


        <ImageView
            android:id="@+id/iv_car"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_detail_car_has_bg"/>
    </RelativeLayout>
    <com.ndboo.widget.PullUpToLoadMore

        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bottom"
        android:layout_below="@id/layout_top"
        android:orientation="vertical">

        <com.ndboo.widget.MyScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <include layout="@layout/layout_wine_detail"/>

        </com.ndboo.widget.MyScrollView>

        <com.ndboo.widget.MyScrollView
            android:id="@+id/scrollview_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout_content"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/layout_image_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>
        </com.ndboo.widget.MyScrollView>
    </com.ndboo.widget.PullUpToLoadMore>

</RelativeLayout>
